# web-vitrinas-silice

./: Dockerfile  README.md  docker-compose.local.yml
.github/workflows/: release.yml
evc/: README.md  pyproject.toml
evc/app/: __init__.py  main.py  presenter.py  views.py
evc/app/models/: __init__.py  session.py
evc/entre_vetas_core_orchestrator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
evc/scripts/: sessions_test.sh
evc/scripts/sessions/: active_session
evc/scripts/sessions/session_2025-09-08_190042/: evc.json  session.md
evc/scripts/sessions/session_2025-09-09_073314/: evc.json  session.md
evc/scripts/sessions/session_2025-09-09_074322/: evc.json  session.md
evc/scripts/sessions/session_2025-09-09_074532/: evc.json  session.md
evc/scripts/sessions/session_2025-09-09_165655/: evc.json  session.md
nginx/: nginx.conf
public/: index.html  thank-you.html  whatsapp.html
public/assets/css/: styles.css
public/assets/css/base/: _animations.css  _base.css  _globals.css  _variables.css
public/assets/css/components/: _buttons.css  _cards.css  _chatbot.css  _forms.css  _modal.css  _navigation.css  _product-modal.css
public/assets/css/layouts/: _footer.css  _header.css  _hero.css  _location-cta.css  _responsive.css  _sections.css  _thank-you.css
public/assets/css/pages/: thank-you.css
public/assets/css/sections/: _hero.css
public/assets/js/: app.js  config.js  content.js  dom.js  main.js
public/assets/js/modules/: auth.js  chatbot.js  header.js  mobileMenu.js  modal.js  productModal.js  scrollObserver.js  tracking.js
